--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "firebase": "^8.7.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "thunk": "0.0.1",
     "web-vitals": "^1.0.1"
   },
