--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "firebase": "^8.7.1",
+    "formik": "^2.2.9",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
